[gd_scene load_steps=3 format=2]

[ext_resource path="res://ConnectionBox.gd" type="Script" id=1]

[sub_resource type="CanvasItemMaterial" id=1]

[node name="ConnectionBox" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -195.0
margin_top = -168.0
margin_right = 195.0
margin_bottom = 168.0
rect_scale = Vector2( 0.869457, 0.884077 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0.372549, 0.72549, 1, 1 )
self_modulate = Color( 0, 0, 0, 1 )
material = SubResource( 1 )
margin_left = 3.0
margin_top = 4.0
margin_right = 392.0
margin_bottom = 340.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 97.0
margin_top = 93.0
margin_right = 272.0
margin_bottom = 198.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="adresse_ip" type="LineEdit" parent="Panel/VBoxContainer"]
margin_top = 12.0
margin_right = 175.0
margin_bottom = 36.0
text = "localhost"
placeholder_text = "IP Adress"

[node name="port" type="LineEdit" parent="Panel/VBoxContainer"]
margin_top = 40.0
margin_right = 175.0
margin_bottom = 64.0
text = "35555"
placeholder_text = "Port"

[node name="pseudo" type="LineEdit" parent="Panel/VBoxContainer"]
margin_top = 68.0
margin_right = 175.0
margin_bottom = 92.0
placeholder_text = "Nickname"

[node name="Label" type="Label" parent="Panel"]
margin_left = 113.0
margin_top = 50.0
margin_right = 249.0
margin_bottom = 81.0
text = "Connection"
align = 1
valign = 1

[node name="Button" type="Button" parent="Panel"]
margin_left = 121.215
margin_top = 207.52
margin_right = 254.215
margin_bottom = 227.52
text = "Connect"

[connection signal="button_down" from="Panel/Button" to="." method="_on_Button_button_down"]
